# PokerOnline

./: .gitignore  .gitmodules  1.puml  CMakeLists.txt  Example.puml  Interaction.puml  README.md  TODO.md
.github/workflows/: cmake.yml  ctest.yml  docs.yml
Client/: CMakeLists.txt  main.cpp
Client/conf/: Config.h
Client/docs/: Contexctual.puml
Client/docs/Doxygen/: Doxyfile.in
Client/lib/: CMakeLists.txt
Client/lib/internal/: CMakeLists.txt
Client/lib/internal/include/Client/: client.h
Client/lib/internal/src/: client.cpp
Client/test/: CMakeLists.txt
Client/test/src/: client_test.cpp
Common/: CMakeLists.txt  main.cpp
Common/conf/: Config.h  build_all_docs.ps1.in
Common/lib/: CMakeLists.txt
Common/lib/internal/: CMakeLists.txt
Common/lib/internal/include/Common/: iterative_enum.h
Common/lib/internal/include/Common/Common/: automata.h  poker_exception.h
Common/lib/internal/include/Testing/Testing/: data_generator.h  file_generator.h
Common/lib/internal/include/common/common/: thread.h
Common/lib/internal/src/: iterative_enum.cpp
Common/lib/internal/src/Common/: automata.cpp  poker_exception.cpp
Common/lib/internal/src/Testing/: data_generator.cpp  file_generator.cpp
Common/lib/internal/src/common/: thread.cpp
Common/test/: CMakeLists.txt
Common/test/src/: automata_test.cpp  file_generator_test.cpp  iterative_enum_test.cpp
Model/: CMakeLists.txt  main.cpp
Model/conf/: Config.h  Config.in
Model/docs/: ClassDiagram.puml
Model/lib/internal/: CMakeLists.txt
Model/lib/internal/include/Model/: card.h  rank.h  suit.h
Model/lib/internal/src/: card.cpp  rank.cpp  suit.cpp
Model/test/: CMakeLists.txt
Model/test/src/: card_test.cpp  suit_test.cpp
Server/: CMakeLists.txt  main.cpp
Server/conf/: Config.h  Config.in  CreateDatabaseDumps.ps1
Server/docs/: DBConnectionDetailsSample.json  Database.md  Description.md
Server/docs/DatabaseDumps/2023_05_14_13_47_36/: database_dump_2023_05_14_13_47_36_dev.sql  database_dump_2023_05_14_13_47_36_prod.sql
Server/docs/DatabaseDumps/2023_06_04_00_43_12/: database_dump_2023_06_04_00_43_12_dev.sql  database_dump_2023_06_04_00_43_12_prod.sql
Server/docs/UML/: LibStructure.puml
Server/lib/: CMakeLists.txt
Server/lib/internal/: CMakeLists.txt
Server/lib/internal/include/Server/: database_manager.h  server.h
Server/lib/internal/include/Server/Database/: database_config.h  database_config_parser.h  database_manager.h
Server/lib/internal/src/: database_config.cpp  database_config_parser.cpp  database_manager.cpp  server.cpp
Server/test/: CMakeLists.txt
Server/test/src/: database_manager_test.cpp
client/: CMakeLists.txt  main.cpp
client/conf/: config.in
client/lib/internal/: CMakeLists.txt
client/lib/internal/include/client/: client.h
client/lib/internal/src/: client.cpp
client/test/src/: client_test.cpp
common/: CMakeLists.txt  main.cpp
common/docs/doxygen/: Doxyfile.in
common/lib/internal/: CMakeLists.txt
common/lib/internal/include/common/common/: automata.h  config.h  poker_exception.h  thread.h
common/lib/internal/include/testing/testing/: data_generator.h  file_generator.h
common/lib/internal/src/common/: automata.cpp  poker_exception.cpp  thread.cpp
common/lib/internal/src/testing/: data_generator.cpp  file_generator.cpp
common/test/: CMakeLists.txt
common/test/src/: automata_test.cpp  file_generator_test.cpp  thread_test.cpp
model/: CMakeLists.txt  main.cpp
model/docs/: TODO.md
model/docs/uml/src/: class_diagram.puml
model/lib/internal/: CMakeLists.txt
model/lib/internal/include/model/: card.h  rank.h  suit.h
model/lib/internal/src/: card.cpp  rank.cpp  suit.cpp
model/test/: CMakeLists.txt
model/test/src/: card_test.cpp  suit_test.cpp
server/: CMakeLists.txt  main.cpp
server/conf/: create_database_dumps.ps1
server/docs/: connection_details_sample.db.json  database.md  description.md
server/docs/uml/: lib_structure.puml
server/docs/uml/src/: thread_display.puml
server/lib/internal/: CMakeLists.txt
server/lib/internal/include/server/: config.h  program_arguments_parser.h  server.h
server/lib/internal/include/server/database/: config.h  config_parser.h  controller.h  database_manager.h  database_thread.h  request.h  thread.h
server/lib/internal/include/server/database/tables/: users.h
server/lib/internal/src/: config.cpp  config_parser.cpp  controller.cpp  database_config.cpp  database_config_parser.cpp  database_manager.cpp  program_arguments_parser.cpp  server.cpp  users.cpp
server/lib/internal/src/database/: request.cpp  thread.cpp
server/test/: CMakeLists.txt  main_test.cpp
server/test/src/: database_manager_test.cpp
